--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '3.4'
 services:
-    kovan.dnp.dappnode.eth:
-        image: 'kovan.dnp.dappnode.eth:0.1.3'
-        build: ./build
-        volumes:
-            - 'kovan:/root/.local/share/io.parity.ethereum/'
-        environment:
-            - >-
-                EXTRA_OPTS=--jsonrpc-port 8545 --jsonrpc-interface all
-                --jsonrpc-hosts all --jsonrpc-cors all --ws-interface all
-                --ws-port 8546 --ws-origins all --ws-hosts all
-        ports:
-            - '127.0.0.1:8546:8546'
-            - '127.0.0.1:8545:8545'
-            - '32323:30303'
-            - '32323:30303/udp'
-            - '32324:30304/udp'
+  kovan.dnp.dappnode.eth:
+    image: 'kovan.dnp.dappnode.eth:0.1.4'
+    build: ./build
+    volumes:
+      - 'kovan:/root/.local/share/io.parity.ethereum/'
+    environment:
+      - >-
+        EXTRA_OPTS=--jsonrpc-port 8545 --jsonrpc-interface all --jsonrpc-hosts
+        all --jsonrpc-cors all --ws-interface all --ws-port 8546 --ws-origins
+        all --ws-hosts all
+    ports:
+      - '127.0.0.1:8546:8546'
+      - '127.0.0.1:8545:8545'
+      - '32323:30303'
+      - '32323:30303/udp'
+      - '32324:30304/udp'
 volumes:
-    kovan: {}
+  kovan: {}
